# munet

./: .gitignore  README.md  eval.py  example.py  pyproject.toml  requirements.txt  setup.py  train.py
configs/: config.yaml
configs/data/: default.yaml
configs/eval/: config.yaml
configs/model/: unet.yaml
configs/train/: config.yaml
configs/training/: default.yaml
munet/: __init__.py
munet/data/: __init__.py
munet/models/: __init__.py  simtoreal.py  unet.py
munet/training/: __init__.py  trainer.py
munet/utils/: __init__.py  metrics.py  visualization.py
src/: __init__.py
src/data/: dataset.py
src/models/: __init__.py  unet.py
src/training/: trainer.py
tests/: test_dataset.py  test_model.py  test_trainer.py
